# sheet-coin

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  install.sh  pyproject.toml
.github/workflows/: test.yml
src/sheet_coin/: __init__.py  app.py  collector.py  config.py
systemd/: sheet-coin.service
tests/: test_app.py  test_collector.py  test_config.py
